Fixed bug 1059: Change rule name "Use Singleton" should be "Use Utility class"
Fixed bug 1106: PMD 5.0.4 fails with NPE on parsing java enum with inner class instance creation
Fixed bug 1115: commentRequiredRule in pmd 5.1 is not working properly
Fixed bug 1130: CloseResource doesn't recognize custom close method
Fixed bug 1134: UseStringBufferLength: false positives

New EcmaScript rules and ruleset:
	Controversial ruleset, featuring
		- AvoidWithStatement
	UseBaseWithParseInt

New Java rules:
	GuardLogStatement
		- replace xpath implementation of GuardDebugLogging by GuardLogStatement (better perf)
	CommentRequired
		- basic rule to check for existence for formal (javadoc) comments.
	AvoidProtectedMethodInFinalClassNotExtending
		- rule to avoid protected methods in final classes that don't extend anything other than Object.
	ConsecutiveAppendsShouldReuse
		- rule to encourage to reuse StringBuilder.append returned object for consecutive calls.

CPD Command Line Changes:
  Added non-recursive option "--non-recursive" to not scan sub-directories
  Added option "--exclude" to exclude specific files from being scanned (thanks to Delmas for patch #272)

Upgrade to javacc 5.0 (see patch #1109 Patch to build with Javacc 5.0)


August 11, 2013 - 5.0.5:

Fixed bug  991: AvoidSynchronizedAtMethodLevel for static methods
Fixed bug 1084: NPE at UselessStringValueOfRule.java:36
Fixed bug 1091: file extension for fortran seems to be wrong in cpdgui tools
Fixed bug 1092: Wrong Attribute "excludemarker" in Ant Task Documentation
Fixed bug 1095: AvoidFinalLocalVariable false positive
Fixed bug 1099: UseArraysAsList false positives
Fixed bug 1102: False positive: shift operator parenthesis
Fixed bug 1104: IdempotentOperation false positive
Fixed bug 1107: PMD 5.0.4 couldn't parse call of parent outer java class method from inner class
Fixed bug 1069: Eclipse plugin does not accept project-local config
Fixed bug 1111: False positive: Useless parentheses